--- a/src/app/components/left-sidebar/left-sidebar.component.scss
+++ b/src/app/components/left-sidebar/left-sidebar.component.scss
@@ -2,7 +2,7 @@
   padding: 1em;
   position: fixed;
   width: 200px;
-  overflow: scroll;
+  overflow: auto;
   height: 100%;
   padding-bottom: 120px;
 }
