--- a/src/app/components/toast/toast.component.scss
+++ b/src/app/components/toast/toast.component.scss
@@ -4,7 +4,7 @@
   right: 1em;
   min-width: 300px;
   max-height: 80%;
-  overflow: scroll;
+  overflow: auto;
   z-index: 10;
 }
 .close{
